--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,17 @@
-body {
-    background-color: darkcyan;
-}
-#Profile {
-    margin: auto;
-    padding-top: 30px;
+#profile {
+    z-index: -1;
+    position: relative;
+    padding-top: 200px;
     text-align: center;
     color: white;
     font-size: xx-large;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif   
+}
+#icons a {
+    color: transparent;
+}
+
+#wave {
+    z-index: -2;
+    position: fixed;
 }
